...
                                <rect key="frame" x="0.0" y="28" width="375" height="258"/>
                                <autoresizingMask key="autoresizingMask"/>
                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="r0b-BH-jCV" id="tqq-nl-J8F">
                                    <rect key="frame" x="0.0" y="0.0" width="375" height="257.5"/>
                                    <autoresizingMask key="autoresizingMask"/>
                                    <subviews>
                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2tu-rS-vS6">
                                            <rect key="frame" x="8" y="26" width="359" height="34"/>
                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                            <nil key="textColor"/>
                                            <nil key="highlightedColor"/>
                                        </label>
...
                                <rect key="frame" x="79" y="171" width="217" height="37"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="58R-fe-gHE" customClass="GIDSignInButton">
                                <rect key="frame" x="67" y="253" width="240" height="128"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                            </view>
                        </subviews>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
...
                            </segmentedControl>
                            <segmentedControl opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="jna-oT-QDW">
                                <rect key="frame" x="182" y="110" width="177" height="29"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <segments>
                                    <segment title="Anonymous"/>
                                    <segment title="By You"/>
                                </segments>
                            </segmentedControl>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Select a duration:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Bvj-5s-11P">
                                <rect key="frame" x="16" y="427" width="134" height="21"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
...
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                        </subviews>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                    </view>
                    <navigationItem key="navigationItem" title="New Post" id="BWg-cT-W4Z">
                        <barButtonItem key="rightBarButtonItem" title="Save Post" id="TuL-7O-Xb6">
                            <connections>
                                <segue destination="avl-Sz-flh" kind="show" identifier="ShowNewPost" id="4D9-IG-NRd"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
                    <connections>
...
            </objects>
            <point key="canvasLocation" x="2785" y="740"/>
        </scene>
        <!--New Post Scene-->
        <scene sceneID="hk3-2b-0m1">
            <objects>
                <navigationController title="New Post Scene" automaticallyAdjustsScrollViewInsets="NO" id="JfE-Lq-rt0" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="New Post" image="Plus" id="f0j-TG-BwR"/>
                    <toolbarItems/>
                    <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
                    <size key="freeformSize" width="375" height="667"/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="4Hx-c4-ghS">
                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
...
